# sha1

./: .gitignore  CMakeLists.txt  hmac-sha1.cc  hmac-sha1.h  sha1.cc  sha1.h
test/: CMakeLists.txt  test.cc  test.h.in
test/res/: random  test.cc
